test/Fail/InvalidNamePartIdiom.agda
test = forall _⦇_ → Set
