test/Fail/InvalidNamePartIdiom.err
InvalidNamePartIdiom.agda:1.19: error: [ParseError]
in the name _⦇_, the part ⦇ is not valid because it is an idiom bracket
